# fleurs-ds

./: README.md  pyproject.toml  requirements-all.txt  requirements.txt
.devcontainer/: devcontainer.json  setup-direnv.sh
fleurs_ds/: __init__.py  _get_dataset.py
fleurs_ds/types/: features.py
