[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = [
  "aiofiles",
  "google-language-support (>=0.3.0)",
  "httpx",
  "opencc (<1.2.0)",
  "pydantic (>=2)",
  "pydantic-settings",
  "str-or-none",
]
description = "Google Fleurs As Huggingface Dataset"
license = { text = "MIT" }
name = "fleurs-ds"
readme = "README.md"
requires-python = ">=3.11,<4"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/allen2c/fleurs-ds"
"PyPI" = "https://pypi.org/project/fleurs-ds/"
Repository = "https://github.com/allen2c/fleurs-ds"

[tool.poetry]
packages = [{ include = "fleurs_ds" }]

[tool.poetry.extras]
all = []

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "*" }
codepress = "*"
datasets = { version = "*", optional = true, extras = ["audio"] }
isort = "*"
poetry-plugin-export = "*"
pydub = { version = "*", optional = true }
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
rich = "*"
rich-color-support = "*"
setuptools = "*"
soundfile = { version = "*", optional = true }
torch = { version = "*", optional = true }
torchcodec = { version = "*", optional = true }
twine = "*"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[tool.pytest.ini_options]
env = ["ENVIRONMENT=test", "PYTEST_IS_RUNNING=true"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
